# M2i_Projet_CDSD

./: .gitignore  2025_12_05-statement.md  README.md  docker-compose.yml  main.py  pyproject.toml
config/: etl_config.yaml
etl/: dockerfile  main.py  requirements.txt
etl/src/extractors/: abstract_extractor.py  api_extractor.py  csv_extractor.py  json_extractor.py  postgresql_extractor.py
etl/src/loaders/: abstract_loader.py  minio_loader.py
etl/src/pipelines/: abstract_etl_pipeline.py
etl/src/utils/: config.py  logger.py  minio.py
etl/tests/extractors/: test_minio_extractor.py
etl/tests/loaders/: test_minio_loader.py
etl/tests/utils/: test_minio.py
src/extractors/: api_extractor.py  excel_extractor.py  json_extractor.py  minio_extractor.py
src/loaders/: csv_loader.py  excel_loader.py  json_loader.py  minio_loader.py
src/pipelines/: abstract_etl_pipeline.py  etl_pipeline.py
src/transformers/: abstract_transformer.py
src/utils/: config.py  minio.py
